# RebrnG_new

./: .gitignore  Cargo.toml  DESIGN.md  README.md  build-playtest.cmd  build-playtest.ps1  package.json  pnpm-lock.yaml  start-game.cmd  start-game.ps1  verify-game.cmd  verify-game.ps1
apps/desktop/: package.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
content/s0/: manifest.yaml
content/s0/actions/: route-entry-actions.yaml
content/s0/encounters/: qingmao-danger.yaml
content/s0/gu/: moonlight-gu.yaml
content/s0/movements/: qingmao-core-movements.yaml
content/s0/narratives/: s0-local-narratives.yaml
content/s0/nodes/: qingmao-core.yaml
content/s0/opening/: fixed-opening.yaml
content/s0/routes/: route-entries.yaml
content/s0/setup/: setup-content.yaml
content/s0/windows/: eight-free-windows.yaml
crates/content-tools/: Cargo.toml
crates/content-tools/src/: main.rs
crates/game-core/: Cargo.toml
crates/game-core/src/: lib.rs
crates/game-core/tests/: s0_eight_round_performance.rs  sprint1_playability_acceptance.rs  sprint3_setup_s0_regression.rs  sprint8_opening_rite_aperture.rs  sprint9_aperture_cultivation_loop.rs
docs/superpowers/data/: first-volume-story-beats.json  sprint10-liquor-worm-flower-wine-targets.json  sprint6-narrative-targets.json  (+3 more)
scripts/: check-visible-text.ps1  deepseek-candidates.mjs  deepseek-candidates.test.mjs  extract-canon-source-map.mjs  extract-canon-source-map.test.mjs  validate-canon-index.mjs
(+63 files in other folders)
