[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/content-tools",
  "crates/game-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["normalSp"]
license = "UNLICENSED"

[workspace.dependencies]
rebrng-game-core = { path = "crates/game-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
